<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">System rehabilitacji online</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id">ID:</string>
    <string name="password">Haslo:</string>
    <string name="logbutton">Zaloguj</string>
    <string name="zamknijButton">Zamknij</string>
    <string name="title_activity_login_dialog">LoginDialog</string>
    <string name="pleaseWait">Prosze czekaj. Trwa logowanie..</string>
    <string name="pleaseWaitFalse">Blad autoryzacji</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="menu1">Program treningowy</string>
    <string name="menu2">Kalendarz leczenia</string>
    <string name="menu3">Kontakt z lekarzem</string>
    <string name="menu4">Historia leczenia</string>
    <string name="menu5">Moje dane</string>
    <string name="menu6">Narzedzia</string>
    <string name="menu7">O aplikacji</string>
    <string name="menu11">Plan na dzis</string>
    <string name="menu12">Plan na jutro</string>
    <string name="menu13">Plan tygodniowy</string>
    <string name="menu21">Wyswietl zaplanowane wizyty</string>
    <string name="menu22">Zaplanuj wizyte u lekarza</string>
    <string name="menu31">Przejdz do wiadomosci</string>
    <string name="menu32">Telefon do lekarza</string>
    <string name="menu33">SMS do lekarza</string>
    <string name="menu41">Wyswietl historie wizyt</string>
    <string name="menu51">Dane ogolne</string>
    <string name="menu52">Lekarz prowadzacy</string>
    <string name="menu61">Wyloguj</string>
    <string name="menu62">Sprawdz uaktualnienia</string>
    <string name="menu63">Pomoc</string>
    <string name="menu71">O autorze</string>
    <string name="menu72">Przejdz do strony autora</string>
    <string name="title_activity_trening">TreningActivity</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="title_activity_week_plan">WeekPlanActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="send_message">Wyslij</string>
    <string name="title_activity_message_box">MessageBoxActivity</string>
    <string name="temat">Temat</string>
    <string name="data">Data</string>
    <string name="contentTitle">Brak wiadomosci</string>
    <string name="contentData">-</string>
    <string name="str_back">Poprzednia</string>
    <string name="str_for">Nastepna</string>
    <string name="nowa">Nowa</string>
    <string name="new_title">Podaj tytul nowych wiadomosci</string>
    <string name="ok">OK</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="warningSMS">Uwaga! Urzadzenie musi posiadac karte SIM!\n</string>
    <string name="hintSMS">Wpisz wiadomosc..</string>
    <string name="sendSMS">Wyslij</string>
    <string name="number_of_mess">Liczba wiadomosci: </string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_plan_visit">PlanVisitActivity</string>
    <string name="zaplanuj_wizyte">Wyslij zapytanie o wizytę w wybranym dniu</string>
    <string name="ic_action_refresh">Refresh</string>
    <string name="title_activity_history">HistoryActivity</string>

</resources>
